feat: add descriptions to profiler categories